# gemini-cli-prompt-library

./: (dspy_integration) has been correctly reimplemented in the consolidated versions (dspy_helm).  .flake8  .gitignore  .mergify.yml  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_2026_03_29.md  AUDIT_REPORT_2026_04_18.md  AUDIT_REPORT_2026_04_21.md  AUDIT_REPORT_FEB_2026.md  AUDIT_SUMMARY_REPORT.md  CI_LINT_FIXES.md  DSPY_HELM_IMPLEMENTATION_PLAN.md  GEMINI.md  GRAPHITE_AGENT_V7_3_DIFF_REPORT.md  GRAPHITE_AGENT_V7_3_README.md  GRAPHITE_AGENT_V7_DIFF_REPORT.md  GRAPHITE_AGENT_V7_README.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  INTEGRATED_ENHANCEMENT_PLAN.md  JOBS_FOR_JULES.md  JULES_ENHANCEMENT_TASKS.md  META_TODO.md  Makefile  OPTIMAL_CONFIG_PLAN.md  PR_EVALUATION_PLAN.md  QWEN.md  README.md  REFCTORING_SUMMARY.md  REOPEN_31.md  SCHEDULED_AUDIT_REPORT.md  TODO.md  TODO_MASTER.md  commands_manifest.json  fix.py  fix_merge_audit.py  fix_merge_conflict.py  jules_commands.sh  (+17 more)
.github/: dependabot.yml
.graphite-agent/: 1_analyze_and_plan.py  1_analyze_and_plan_v64.py  2_strict_executor.py  COMPATIBILITY.md  IMPLEMENTATION_REPORT_V72.md  README.md  plan.json
.trunk/: trunk.yaml
checklists/: prompts-enhancement.md
codeql-custom-queries-python/: codeql-pack.yml
docs/: ACTIVE_CONTEXT.md  AGENTIC_COMPATIBILITY.md  CLI_FRAMEWORK_GUIDE.md  CLI_LIBRARY_MATRIX.md  DSPY_HELM_AUDIT.md  INSTALL_CROSS_PLATFORM.md  INSTALL_FORKS.md  INTEGRATION_ECOSYSTEMS.md  SESSION_ANALYSIS.md
dspy_helm/: __init__.py  cli.py  requirements.txt
dspy_integration/: __init__.py  (+12 more)
(+298 files in other folders)
