[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dspy-integration"
version = "1.0.0"
description = "DSPy Integration for Prompt Library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.3",
    "dspy>=3.1.2",
    "datasets==4.1.1",
    "urllib3==2.3.0",
    "cloudpickle==3.1.0",
    "pyyaml>=6.0",
    "toml>=0.10.2",
    "tomli>=2.0.1",
    "rich>=13.0"
]

[project.scripts]
dspy-integration = "dspy_integration.cli:main"

[tool.setuptools.packages.find]
include = ["dspy_integration*"]
